# fdm_cost_calculator

./: .gitignore  Bundle.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: logo.icns
src/: filament_prices.rs  logic.rs  main.rs  ui.rs
