[package]
name = "fdm_cost_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
image = "0.25.5"
egui_extras = "0.29.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging"] }

[[bin]]
name = "fdm_cost_calculator"
path = "src/main.rs"

# Use the windows subsystem to suppress the terminal on Windows
[profile.release]
lto = true      # Optimize for release builds
panic = "abort" # Reduce binary size
strip = true    # Remove debug symbols
