[package]
name = "fdm_cost_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
image = "0.25.5"
egui_extras = "0.29.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging"] }

# Binary configuration
[[bin]]
name = "fdm_cost_calculator"
path = "src/main.rs"

# macOS-specific configuration
[target.'cfg(target_os = "macos")']
rustflags = ["-C", "link-args=-Wl,-rpath,@executable_path/../Frameworks"]

# Release profile optimizations
[profile.release]
lto = true      # Link-time optimization for smaller binaries
panic = "abort" # Reduce binary size by disabling unwind information
strip = true    # Strip debug symbols to minimize binary size
